<resources>
    <string name="app_name">עזר מפקד</string>
    <string name="soldiers_title">חיילים</string>
    <string name="settings_title">הגדרות</string>
    <string name="units_overview_title">יחידות</string>
    <string name="unit_create_title">הוספת הערה</string>
    <string name="unit_update_title">עדכון הערה</string>
    <string name="fold_arrow">fold</string>
    <string name="remove_desc">remove</string>
    <string name="id">id</string>
    <string name="category">קטגוריה</string>
    <string name="title">כותרת</string>
    <string name="create">צור</string>
    <string name="update">עדכן</string>

    <!--Unit Activity-->
    <string name="unit_lbl_type">סוג: %1$s</string>
    <string name="unit_lbl_commander">מפקד: %1$s</string>
    <string name="unit_tab_notes">הערות</string>
    <string name="unit_tab_soldiers">חיילים</string>
    <string name="unit_tab_logs">דוחות</string>
    <string name="notes_btn_add">הערה חדשה</string>
    <string name="logs_btn_add">דוח חדש</string>
    <string name="soldiers_btn_add">חייל חדש</string>
    <string name="soldiers_lbl_sort">מיין לפי</string>

    <!--Note Activity-->
    <string name="note_body">הערה</string>

    <!--Log Activity-->
    <string name="log_date">תאריך</string>

    <!--Toolbar-->
    <string name="toolbar_btn_menu_placeholder">menu</string>
    <string name="toolbar_menu_settings">הגדרות</string>
    <string name="toolbar_menu_refresh">רענן</string>

    <!--Dialogs-->
    <string name="dialog_delete_title">האם אתה בטוח?</string>
    <string name="dialog_delete_msg">פעולה זאת תמחק את %1$s מהרשימה לתמיד!</string>
    <string name="dialog_note_type">האם אתה רוצה למחוק את הנושא %1$s?</string>
    <string name="dialog_add_type">תן שם לקטגוריה חדשה:</string>
    <string name="dialog_recursive">לכלול חיילים בתת יחידות?</string>
    <string name="dialog_yes">כן</string>
    <string name="dialog_no">לא</string>
    <string name="dialog_add">הוסף</string>
    <string name="dialog_cancel">בטל</string>

    <!--Arrays-->
    <string-array name="cmb_sort_by">
        <item>דרגה</item>
        <item>שם</item>
        <item>תפקיד</item>
    </string-array>
</resources>
