<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".UnitActivity">

    <TextView
        android:id="@+id/unit_lbl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/unit_txt_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/unit_txt_id" />

    <EditText
        android:id="@+id/unit_txt_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unit_lbl_id"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/include"
        layout="@layout/main_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit_lbl_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/unit_lbl_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unit_txt_id" />

    <TextView
        android:id="@+id/unit_lbl_commander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/unit_lbl_commander"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_lbl_type" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/unit_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_lbl_commander">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/unit_tab_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_tab_notes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/unit_tab_soldiers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_tab_soldiers" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/unit_tab_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_tab_logs" />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/unit_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_tabs">

        <HorizontalScrollView
            android:id="@+id/unit_side_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>